fix: button group border spacing

--- a/projects/ui/src/shim.cds-core.scss
+++ b/projects/ui/src/shim.cds-core.scss
@@ -259,6 +259,7 @@
   --clr-btn-icon-disabled-color: var(--cds-alias-typography-disabled-button, var(--cds-global-color-construction-500)); // var(--clr-btn-default-disabled-color, #{$clr-btn-default-disabled-color});
 
   // Button groups
+  --clr-btn-border-width: var(--cds-global-space-1);
 
   /* Alert Color Properties */
 
